src/test/compile-fail/bad-send.rs
// xfail-boot
// xfail-stage0
// xfail-stage1
// xfail-stage2
// error-pattern: mismatched types

fn main() {
  10 <| 10;
}